@@ -34,7 +34,7 @@ import org.gradle.crypto.checksum.Checksum
 
 configurations {
     dbArtifacts
-    defaultsGenerator
+    defaultsGenerator.extendsFrom(dbArtifacts)
     dbZip {
         canBeConsumed = true
         canBeResolved = false
@@ -52,7 +52,6 @@ configurations {
 dependencies {
     dbArtifacts project(':ignite-runner')
 
-    defaultsGenerator configurations.dbArtifacts
     defaultsGenerator project(path: ':ignite-runner', configuration: 'defaultsGenerator')
 }
 
@@ -292,6 +291,7 @@ setupBuilder {
                            "--add-opens=java.base/java.math=ALL-UNNAMED",
                            "--add-opens=java.base/java.util=ALL-UNNAMED",
                            "--add-opens=java.base/jdk.internal.misc=ALL-UNNAMED",
+                           "--add-opens=java.base/jdk.internal.access=ALL-UNNAMED",
                            "--add-opens=java.base/sun.nio.ch=ALL-UNNAMED",
                            "-Dio.netty.tryReflectionSetAccessible=true",
                            "-Djava.util.logging.config.file=etc\\ignite.java.util.logging.properties",
